# tweets_to_character

./: .gitignore  pyproject.toml
tweets_to_character/: component.yaml  llm.py  prepare_tweets.py  prompts.py  run.py  schemas.py
tweets_to_character/configs/: agent_deployments.json  data_generation_config.json
